--- a/index.html
+++ b/index.html
@@ -1,47 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Results summary component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Results summary component</title>
 
-  Your Result
-  76
-  of 100
-
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
-
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <main>
+      <article class="card">
+        <section class="card__result">
+          <h1 class="card__title">Your Result</h1>
+          <div class="score">
+            <h1 class="score__hero">76</h1>
+            <h3>of <span class="score__over">100</span></h3>
+          </div>
+          <h1 class="card__message">Great</h1>
+          <p>
+            You scored higher than 65% of the people who have taken these tests.
+          </p>
+        </section>
+        <section class="summary">
+          <h1 class="summary__title">Summary</h1>
+          <div class="summary__section">
+            <div class="summary__content">
+              <h2 class="red">Reaction</h2>
+              <p><span>80</span> / <span>100</span></p>
+            </div>
+            <div class="summary__content">
+              <h2 class="yellow">Memory</h2>
+              <p><span>92</span> / <span>100</span></p>
+            </div>
+            <div class="summary__content">
+              <h2 class="green">Verbal</h2>
+              <p><span>61</span> / <span>100</span></p>
+            </div>
+            <div class="summary__content">
+              <h2 class="blue">Visual</h2>
+              <p><span>72</span> / <span>100</span></p>
+            </div>
+          </div>
+        </section>
+        <button class="button">Continue</button>
+      </article>
+    </main>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+      </div>
+    </footer>
+  </body>
 </html>
