--- a/index.html
+++ b/index.html
@@ -28,30 +28,31 @@
           <h1 class="card__title">Your Result</h1>
           <div class="score">
             <h1 class="score__hero">76</h1>
-            <h3>of <span class="score__over">100</span></h3>
+
+            <h2>of <span class="score__over">100</span></h2>
           </div>
           <h1 class="card__message">Great</h1>
-          <p>
+          <p class="card__description">
             You scored higher than 65% of the people who have taken these tests.
           </p>
         </section>
         <section class="summary">
           <h1 class="summary__title">Summary</h1>
           <div class="summary__section">
-            <div class="summary__content">
-              <h2 class="red">Reaction</h2>
+            <div class="flex-group">
+              <h1 class="red">Reaction</h1>
               <p><span>80</span> / <span>100</span></p>
             </div>
-            <div class="summary__content">
-              <h2 class="yellow">Memory</h2>
+            <div class="flex-group">
+              <h1 class="yellow">Memory</h1>
               <p><span>92</span> / <span>100</span></p>
             </div>
-            <div class="summary__content">
-              <h2 class="green">Verbal</h2>
+            <div class="flex-group">
+              <h1 class="green">Verbal</h1>
               <p><span>61</span> / <span>100</span></p>
             </div>
-            <div class="summary__content">
-              <h2 class="blue">Visual</h2>
+            <div class="flex-group">
+              <h1 class="blue">Visual</h1>
               <p><span>72</span> / <span>100</span></p>
             </div>
           </div>
