Updating style.css 🔧
Adding necessary style for the `summary` section

--- a/index.html
+++ b/index.html
@@ -39,21 +39,36 @@
         <section class="summary">
           <h1 class="summary__title">Summary</h1>
           <div class="summary__section">
-            <div class="flex-group">
-              <h1 class="red">Reaction</h1>
-              <p><span>80</span> / <span>100</span></p>
+            <div class="flex-group red-bg">
+              <div class="summary__hero">
+                <img src="./assets/images/icon-reaction.svg" alt="" />
+                <h1 class="red-txt">Reaction</h1>
+              </div>
+              <p><span class="summary__score">80</span> / <span>100</span></p>
             </div>
-            <div class="flex-group">
-              <h1 class="yellow">Memory</h1>
-              <p><span>92</span> / <span>100</span></p>
+            <div class="flex-group yellow-bg">
+              <div class="summary__hero">
+                <img src="./assets/images/icon-memory.svg" alt="" />
+                <h1 class="yellow-txt">Memory</h1>
+              </div>
+              <p>
+                <span class="summary__score">92</span>
+                / <span>100</span>
+              </p>
             </div>
-            <div class="flex-group">
-              <h1 class="green">Verbal</h1>
-              <p><span>61</span> / <span>100</span></p>
+            <div class="flex-group green-bg">
+              <div class="summary__hero">
+                <img src="./assets/images/icon-verbal.svg" alt="" />
+                <h1 class="green-txt">Verbal</h1>
+              </div>
+              <p><span class="summary__score">61</span> / <span>100</span></p>
             </div>
-            <div class="flex-group">
-              <h1 class="blue">Visual</h1>
-              <p><span>72</span> / <span>100</span></p>
+            <div class="flex-group blue-bg">
+              <div class="summary__hero">
+                <img src="./assets/images/icon-visual.svg" alt="" />
+                <h1 class="blue-txt">Visual</h1>
+              </div>
+              <p><span class="summary__score">72</span> / <span>100</span></p>
             </div>
           </div>
         </section>
