--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by
+        <a href="https://www.frontendmentor.io/profile/SerPet-eng"
+          >Christian De Guzman</a
+        >.
       </div>
     </footer>
   </body>
