--- a/index.html
+++ b/index.html
@@ -40,34 +40,43 @@
           <div class="summary__section">
             <div class="flex-group red-bg">
               <div class="summary__hero">
-                <img src="./assets/images/icon-reaction.svg" alt="" />
-                <h1 class="red-txt">Reaction</h1>
+                <img src="" alt="" id="red-image" />
+                <h1 class="red-txt" id="red-txt"></h1>
               </div>
-              <p><span class="summary__score">80</span> / <span>100</span></p>
+              <p>
+                <span class="summary__score" id="red-txt-score"></span> /
+                <span>100</span>
+              </p>
             </div>
             <div class="flex-group yellow-bg">
               <div class="summary__hero">
-                <img src="./assets/images/icon-memory.svg" alt="" />
-                <h1 class="yellow-txt">Memory</h1>
+                <img src="" alt="" id="yellow-image" />
+                <h1 class="yellow-txt" id="yellow-txt"></h1>
               </div>
               <p>
-                <span class="summary__score">92</span>
+                <span class="summary__score" id="yellow-txt-score"></span>
                 / <span>100</span>
               </p>
             </div>
             <div class="flex-group green-bg">
               <div class="summary__hero">
-                <img src="./assets/images/icon-verbal.svg" alt="" />
-                <h1 class="green-txt">Verbal</h1>
+                <img src="" alt="" id="green-image" />
+                <h1 class="green-txt" id="green-txt"></h1>
               </div>
-              <p><span class="summary__score">61</span> / <span>100</span></p>
+              <p>
+                <span class="summary__score" id="green-txt-score">61</span> /
+                <span>100</span>
+              </p>
             </div>
             <div class="flex-group blue-bg">
               <div class="summary__hero">
-                <img src="./assets/images/icon-visual.svg" alt="" />
-                <h1 class="blue-txt">Visual</h1>
+                <img src="" alt="" id="blue-image" />
+                <h1 class="blue-txt" id="blue-txt"></h1>
               </div>
-              <p><span class="summary__score">72</span> / <span>100</span></p>
+              <p>
+                <span class="summary__score" id="blue-txt-score"></span> /
+                <span>100</span>
+              </p>
             </div>
           </div>
           <button class="button">Continue</button>
@@ -86,4 +95,5 @@
       </div>
     </footer>
   </body>
+  <script src="./script.js"></script>
 </html>
