Fixing minor issues 🛠️
 - Removing text from "green-txt-score"
 - Commenting a condition for testing purposes

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <h1 class="green-txt" id="green-txt"></h1>
               </div>
               <p>
-                <span class="summary__score" id="green-txt-score">61</span> /
+                <span class="summary__score" id="green-txt-score"></span> /
                 <span>100</span>
               </p>
             </div>
